--- a/Library-Manager/src/styles/NavBar.css
+++ b/Library-Manager/src/styles/NavBar.css
@@ -11,7 +11,7 @@
     @apply flex;
     @apply items-center;
     @apply py-4;
-    @apply px-8;
+    @apply px-4 sm:px-8;
     @apply z-1000;
     @apply shadow-md;
 }
@@ -19,7 +19,7 @@
 .navbar-container {
     @apply flex;
     @apply items-center;
-    @apply justify-end;
+    @apply justify-between;
     @apply w-full;
     @apply max-w-7xl;
     @apply m-auto;
